adlatus-ci-cd/cd/deploy/overlays/test/modules/adlatus/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adlatus-ingress
  namespace: adl
spec:
  ingressClassName: adl-ingress-nginx
  tls:
    - hosts:
      - adlatus.adl-test.dev.bitconex.com
      secretName: tls-secret-adlatus
  rules:
    - host: adlatus.adl-test.dev.bitconex.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: adlatus-service-test
                port:
                  number: 8080
